# adventofcode2022

./: README.md
1/: Main.hs
13/: Main.hs  x13.cabal
14/: Main.hs  x14.cabal
18/: Main.hs
2/: Main.hs
23/: Main.hs
25/: Main.hs
3/: Main.hs
4/: Main.hs
5/: Main.hs  x5.cabal
6/: Main.hs
8/: Main.hs  x8.cabal
