cabal-version:      2.4
name:               x13
version:            0.1.0.0

license:            MIT
author:             Rembane

executable x13
    main-is:          Main.hs
    build-depends:    base ^>=4.16.0.0,
                      containers,
                      megaparsec == 9.3.0,
    default-language: Haskell2010
