cabal-version:      2.4
name:               x14
version:            0.1.0.0

license:            MIT
author:             Rembane

executable x14
    main-is:          Main.hs
    build-depends:    base ^>=4.16.0.0,
                      containers,
                      megaparsec == 9.3.0,
                      vector == 0.13.0.0
    default-language: Haskell2010
